# SpoonQ

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: eight_queen.spoonq  minimize_test.spoonq  set_cover.spoonq  set_packing.spoonq
src/: cli.rs  compile.rs  cond.rs  context.rs  dimacs.rs  error.rs  file.rs  generate.rs  lib.rs  main.rs  optim.rs  resolve.rs  token.rs
tests/: dimacs_test_2.in
